--- a/tcp_serverGenomics/configuration.properties
+++ b/tcp_serverGenomics/configuration.properties
@@ -3,4 +3,7 @@ SSL_PASSWORD=123456
 
 SERVER_HOST=127.0.0.1
 SERVER_PORT=2020
-PATH_FASTA_LOCAL=./data/mis_fasta
+
+# Rutas de persistencia
+PATH_DATA=./data
+PATH_CSV_PACIENTES=./data/pacientes.csv
