--- a/tcp_serverGenomics/configuration.properties
+++ b/tcp_serverGenomics/configuration.properties
@@ -7,3 +7,4 @@ SERVER_PORT=2020
 # Rutas de persistencia
 PATH_DATA=./data
 PATH_CSV_PACIENTES=./data/pacientes.csv
+PATH_FASTA_STORAGE=./data/fasta
