--- a/tcp_serverGenomics/configuration.properties
+++ b/tcp_serverGenomics/configuration.properties
@@ -9,3 +9,5 @@ PATH_DATA=./data
 PATH_CSV_PACIENTES=./data/pacientes.csv
 PATH_CSV_DETECCIONES=./data/detecciones.csv
 PATH_FASTA_STORAGE=./data/fasta
+PATH_ENFERMEDADES=./enfermedades
+PATH_CATALOGO_ENF=./enfermedades/catalog.csv
