--- a/tcp_serverGenomics/configuration.properties
+++ b/tcp_serverGenomics/configuration.properties
@@ -11,3 +11,5 @@ PATH_CSV_DETECCIONES=./data/detecciones.csv
 PATH_FASTA_STORAGE=./data/fasta
 PATH_ENFERMEDADES=./enfermedades
 PATH_CATALOGO_ENF=./enfermedades/catalog.csv
+PATH_LOG_AUDITORIA=./data/logs/auditoria.log
+
